Update to openapi generator 6.0.0
